--- a/src/components/TasksList/TasksList.module.css
+++ b/src/components/TasksList/TasksList.module.css
@@ -16,12 +16,13 @@
 }
 
 .tasks {
-    height: 90%;
+    height: 80%;
+    overflow: scroll;
 }
 
 .functional {
     width: 70%;
-    margin: 0 auto;
+    margin: 5% auto 0;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
