--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,10 @@
     align-items: center;
     justify-content: center;
 }
+
+@media screen and (max-width: 479px) {
+    .App {
+        height: 100vh;
+        width: 100%;
+    }
+}
