--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -24,3 +24,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 479px) {
+    .task {
+        width: 97%;
+    }
+}
