--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,9 @@ body {
     display: flex;
     justify-content: center;
 }
+
+@media screen and (max-width: 479px) {
+    body {
+        display: block;
+    }
+}
