--- a/src/components/TasksList/TasksList.module.css
+++ b/src/components/TasksList/TasksList.module.css
@@ -20,20 +20,64 @@
     overflow: scroll;
 }
 
-.functional {
-    width: 70%;
-    margin: 5% auto 0;
+.inputWrapper {
+    height: 10%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    align-items: center;
+}
+
+.input {
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 8px 0 0 8px;
+    padding: 5px;
+    font-size: 16px;
+}
+
+.input:focus {
+    outline: none;
+}
+
+.input:active {
+    border: 1px solid var(--color-extralight);
+    outline: none;
+}
+
+.functionalButton > img {
+    height: 18px;
+    width: 18px;
 }
 
 .functionalButton {
     background-color: var(--color-extralight);
-    border: 0;
-    font-size: 16px;
-    padding: 16px 32px;
+    height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 14px 28px;
+    border-radius: 0 8px 8px 0;
+    cursor: pointer;
+}
+
+.menu {
+    height: 5%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.menuButton {
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    background-color: var(--color-white);
+    font-size: 14px;
+    padding: 4px 8px;
     border-radius: 8px;
+    cursor: pointer;
+}
+
+.active {
+    /*border: 1px solid var(--color-extralight);*/
+    background-color: var(--color-extralight);
 }
 
 @media screen and (max-width: 479px) {
