--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -19,6 +19,28 @@
     overflow-x: scroll;
 }
 
+.inputWrapper {
+    width: 80%;
+}
+
+.input {
+    width: 100%;
+    height: 30px;
+    border-radius: 8px;
+    padding: 0 5px;
+    font-size: 16px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.input:active {
+    border: thin solid var(--color-extralight);
+    outline: none;
+}
+
+.input:focus {
+    outline: none;
+}
+
 .functional {
     width: 20%;
     display: flex;
